force-app/main/default/objects/Buy_Product__c/Buy_Product__c.object-meta.xml
<CustomObject>
    <label>Buy Product</label>
    <nameField>
        <displayFormat>PRO - {0000}</displayFormat>
        <label>Buy Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buy Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>