force-app/main/default/objects/Buy_Product__c/fields/Buy_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Buy_Quantity__c</fullName>
    <label>Free Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>