force-app/main/default/objects/Buy_Product__c/fields/Buy_Value__c.field-meta.xml
<CustomField>
    <fullName>Buy_Value__c</fullName>
    <label>Buy Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>