force-app/main/default/objects/Buy_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Buy Products</relationshipLabel>
    <relationshipName>Buy_Products</relationshipName>
    <type>Lookup</type>
</CustomField>