force-app/main/default/objects/Buy_Product__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>Buy Products</relationshipLabel>
    <relationshipName>Buy_Products</relationshipName>
    <type>Lookup</type>
</CustomField>