force-app/main/default/objects/Buy_Product__c/fields/Multiples__c.field-meta.xml
<CustomField>
    <fullName>Multiples__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiples</label>
    <type>Checkbox</type>
</CustomField>