force-app/main/default/objects/Buy_Product__c/fields/Offer_Percent__c.field-meta.xml
<CustomField>
    <fullName>Offer_Percent__c</fullName>
    <label>Offer Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>