force-app/main/default/objects/Buy_Product__c/fields/Offer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Offer_Quantity__c</fullName>
    <label>Offer Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>