force-app/main/default/objects/Buy_Product__c/fields/Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Per_Kg__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Per Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>