force-app/main/default/objects/Buy_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Buy Products</relationshipLabel>
    <relationshipName>Buy_Products</relationshipName>
    <type>Lookup</type>
</CustomField>