force-app/main/default/objects/Buy_Product__c/fields/Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Per sale Value (In %)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>