force-app/main/default/objects/Buy_Product__c/fields/Sale_Value_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value_Threshold__c</fullName>
    <label>Sale Value Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>