force-app/main/default/objects/Buy_Product__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Buy Products</relationshipLabel>
    <relationshipName>Buy_Products</relationshipName>
    <type>Lookup</type>
</CustomField>