force-app/main/default/objects/Buy_Product__c/fields/Scheme_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Start_Date__c</fullName>
    <formula>Scheme__r.Scheme_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Start Date</label>
    <type>Date</type>
</CustomField>