force-app/main/default/objects/Buy_Product__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <label>Scheme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Quantity</fullName>
            </value>
            <value>
                <fullName>Sale Value Discount</fullName>
            </value>
            <value>
                <fullName>Per Quantity Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>