force-app/main/default/objects/Buy_Product__c/fields/Secondary_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Category__c</fullName>
    <label>Secondary Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secondary_Customer_Category</valueSetName>
    </valueSet>
</CustomField>